--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <relativePath/>
     </parent>
 
-    <groupId>com.graffiti</groupId>
+    <groupId>de.lorenzware.graffitibackend</groupId>
     <artifactId>graffitibackend</artifactId>
     <version>1.0.0</version>
     <name>Graffiti Backend</name>
@@ -58,7 +58,9 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <optional>true</optional>
+<!--            <optional>true</optional>-->
+            <version>1.18.42</version>
+            <scope>provided</scope>
         </dependency>
 
         <!-- Spring Boot Test -->
@@ -81,7 +83,13 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+
                 </configuration>
+            </plugin>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <version>3.2.5</version>
             </plugin>
         </plugins>
     </build>
