--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 server.port=3000
 
 # Database Configuration
-spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:graffitidb}
-spring.datasource.username=${DB_USER:postgres}
-spring.datasource.password=${DB_PASSWORD:password}
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:51099}/${DB_NAME:postgres}
+spring.datasource.username=${DB_USER:graffiti-user}
+spring.datasource.password=${DB_PASSWORD:graffiti-password}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration
@@ -26,7 +26,7 @@ spring.servlet.multipart.max-request-size=10MB
 file.upload-dir=uploads
 
 # Logging
-logging.level.com.graffiti.backend=INFO
+logging.level.de.lorenzware.graffitibackend=INFO
 logging.level.org.springframework.web=INFO
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.flywaydb=INFO
