working backend with https

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,14 @@
 # Server Configuration
-server.port=3000
+#server.port=3000
 
 # Database Configuration
+#docker postgres auf lokalem rechner
 spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:51099}/${DB_NAME:postgres}
+
+#docker postgres auf meinem synology NAS
+#spring.datasource.url=jdbc:postgresql://${DB_HOST:192.168.178.72}:${DB_PORT:51004}/${DB_NAME:postgres}
+
+
 spring.datasource.username=${DB_USER:graffiti-user}
 spring.datasource.password=${DB_PASSWORD:graffiti-password}
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -26,7 +32,15 @@ spring.servlet.multipart.max-request-size=10MB
 file.upload-dir=uploads
 
 # Logging
-logging.level.de.lorenzware.graffitibackend=INFO
-logging.level.org.springframework.web=INFO
+logging.level.Root=TRACE
+logging.level.de.lorenzware.graffitibackend=DEBUG
+logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.flywaydb=INFO
+
+
+server.port=3443
+server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store-password=changeit
+server.ssl.key-store-type=PKCS12
+server.ssl.key-alias=graffitibackend
