--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,14 +3,26 @@
 
 # Database Configuration
 #docker postgres auf lokalem rechner
-spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:51099}/${DB_NAME:postgres}
+#spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:51099}/${DB_NAME:postgres}
 
 #docker postgres auf meinem synology NAS
 #spring.datasource.url=jdbc:postgresql://${DB_HOST:192.168.178.72}:${DB_PORT:51004}/${DB_NAME:postgres}
 
+#spring.datasource.username=${DB_USER:graffiti-user}
+#spring.datasource.password=${DB_PASSWORD:graffiti-password}
 
-spring.datasource.username=${DB_USER:graffiti-user}
-spring.datasource.password=${DB_PASSWORD:graffiti-password}
+#GCP Cloud SQL Postgres
+#db-name "graffitidb", user "postgres", pw "graffiti-password"...
+#db-name: graffitibackendgcproject:europe-west3:graffitibackenddb
+#jdbc:postgresql:///YOUR_DB_NAME?socketFactory=com.google.cloud.sql.postgres.SocketFactory&cloudSqlInstance=YOUR_PROJECT_ID:europe-west3:YOUR_INSTANCE_ID&user=YOUR_USER&password=YOUR_PASSWORD
+
+spring.datasource.url=jdbc:postgresql:///graffitidb?socketFactory=com.google.cloud.sql.postgres.SocketFactory&cloudSqlInstance=graffitibackendgcproject:europe-west3:graffitibackenddb&user=postgres&password=graffiti-password
+spring.datasource.username=postgres
+spring.datasource.password=mygraffiti-password
+
+#spring.datasource.url=jdbc:postgresql:///${DB_NAME:graffiti}?cloudSqlInstance=${DB_CLOUD_SQL_INSTANCE:graffiti-eu-west1:graffiti-db}&socket
+
+
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration
@@ -32,15 +44,19 @@ spring.servlet.multipart.max-request-size=10MB
 file.upload-dir=uploads
 
 # Logging
-logging.level.Root=TRACE
+logging.level.Root=DEBUG
 logging.level.de.lorenzware.graffitibackend=DEBUG
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.flywaydb=INFO
 
 
-server.port=3443
-server.ssl.key-store=classpath:keystore.p12
-server.ssl.key-store-password=changeit
-server.ssl.key-store-type=PKCS12
-server.ssl.key-alias=graffitibackend
+#for local running with ssl
+#server.port=3443
+#server.ssl.key-store=classpath:keystore.p12
+#server.ssl.key-store-password=changeit
+#server.ssl.key-store-type=PKCS12
+#server.ssl.key-alias=graffitibackend
+
+#for CGR just run with http 8080 with implicit https redirection
+server.port=${PORT:8080}
