renamed location to tag; change back to local db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,22 @@
-# Server Configuration
-#server.port=3000
-
 # Database Configuration
 #docker postgres auf lokalem rechner
-#spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:51099}/${DB_NAME:postgres}
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:51099}/${DB_NAME:postgres}
 
 #docker postgres auf meinem synology NAS
 #spring.datasource.url=jdbc:postgresql://${DB_HOST:192.168.178.72}:${DB_PORT:51004}/${DB_NAME:postgres}
+spring.datasource.username=${DB_USER:graffiti-user}
+spring.datasource.password=${DB_PASSWORD:graffiti-password}
 
-#spring.datasource.username=${DB_USER:graffiti-user}
-#spring.datasource.password=${DB_PASSWORD:graffiti-password}
+
 
 #GCP Cloud SQL Postgres
 #db-name "graffitidb", user "postgres", pw "graffiti-password"...
 #db-name: graffitibackendgcproject:europe-west3:graffitibackenddb
 #jdbc:postgresql:///YOUR_DB_NAME?socketFactory=com.google.cloud.sql.postgres.SocketFactory&cloudSqlInstance=YOUR_PROJECT_ID:europe-west3:YOUR_INSTANCE_ID&user=YOUR_USER&password=YOUR_PASSWORD
-
-spring.datasource.url=jdbc:postgresql:///graffitidb?socketFactory=com.google.cloud.sql.postgres.SocketFactory&cloudSqlInstance=graffitibackendgcproject:europe-west3:graffitibackenddb&user=postgres&password=graffiti-password
-spring.datasource.username=postgres
-spring.datasource.password=mygraffiti-password
-
-#spring.datasource.url=jdbc:postgresql:///${DB_NAME:graffiti}?cloudSqlInstance=${DB_CLOUD_SQL_INSTANCE:graffiti-eu-west1:graffiti-db}&socket
+#spring.datasource.url=jdbc:postgresql:///graffitidb?socketFactory=com.google.cloud.sql.postgres.SocketFactory&cloudSqlInstance=graffitibackendgcproject:europe-west3:graffitibackenddb&user=postgres&password=graffiti-password
+#spring.datasource.username=postgres
+#spring.datasource.password=mygraffiti-password
+    #WEG!? spring.datasource.url=jdbc:postgresql:///${DB_NAME:graffiti}?cloudSqlInstance=${DB_CLOUD_SQL_INSTANCE:graffiti-eu-west1:graffiti-db}&socket
 
 
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -52,11 +48,12 @@ logging.level.org.flywaydb=INFO
 
 
 #for local running with ssl
-#server.port=3443
-#server.ssl.key-store=classpath:keystore.p12
-#server.ssl.key-store-password=changeit
-#server.ssl.key-store-type=PKCS12
-#server.ssl.key-alias=graffitibackend
+server.port=3443
+server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store-password=changeit
+server.ssl.key-store-type=PKCS12
+server.ssl.key-alias=graffitibackend
 
 #for CGR just run with http 8080 with implicit https redirection
-server.port=${PORT:8080}
+#server.port=${PORT:8080}
+#url: https://graffitibackend-amd64-586317135906.europe-west3.run.app/api/graffiti
