-users with registration and login

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -57,3 +57,6 @@ server.ssl.key-alias=graffitibackend
 #for CGR just run with http 8080 with implicit https redirection
 #server.port=${PORT:8080}
 #url: https://graffitibackend-amd64-586317135906.europe-west3.run.app/api/graffiti
+
+# JWT secret for signing tokens
+jwt.secret=change_this_secret_to_a_long_random_string_1234567890!@#$%^&*()
